--- a/android/package.json
+++ b/android/package.json
@@ -28,6 +28,8 @@
     "@wdio/cli": "^5.20.1",
     "@wdio/local-runner": "^5.20.1",
     "@wdio/mocha-framework": "^5.18.7",
-    "browserstack-local": "^1.4.5"
+    "appium": "^2.0.0-beta.19",
+    "appium-doctor": "^1.16.0",
+    "browserstack-local": "^1.5.1"
   }
 }
